--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,32 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="20dp">
+    android:orientation="vertical">
 
     <android.opengl.GLSurfaceView
         android:id="@+id/glSurfaceView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginBottom="12dp" />
-
-    <TextView
-        android:id="@+id/greetingText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/greeting_message"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/showAlertButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:text="show alarm"
-        android:textSize="18sp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
